--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <td>
 
-                <img src="C:/Users\NitcHZacK/Downloads/color-therapy-definition-types-techniques-and-efficacy-5194910_final1-972d594f507449908c885a41347a4a1d.png" width="900" height="500">
+                <img src="ct1.png" width="900" height="500">
     
             </td>
         </tr>
